--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
 <link rel="stylesheet" href="21011401.css">
 
 <h1>Home</h1>
-<h2>Header Two</h2>
+<h2>I'm a simple header!</h2>
 <h3>Header Three</h3>
 
 <div class="banner-image">
     <div class="banner-text">Home</div>
 </div>
 
-Normal text. <b>Bold</b> <i>Italic</i> <u>Underline</u> <s>Strikethrough</s> <h>Highlight</h> <a href="link">Link</a>
+Hello, I am <b>making changes.</b> Look at me, I'm <i>italic text!</i> I can change to <u>underline</u> and <s>strike</s>! I can even <h>highlight</h>! Now I'm a <a href="http://www.imvu.com/">fancy link.</a>
 
-<blockquote>Blockquote</blockquote>
+<blockquote>Blockquote can be used for quoting, random messages, whatever you like!</blockquote>
