--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <h3>Header Three</h3>
 
 <div class="banner-image">
-    <div class="banner-text">Home</div>
+    <div class="banner-text">Bio</div>
 </div>
 
 Hello, I am <b>making changes.</b> Look at me, I'm <i>italic text!</i> I can change to <u>underline</u> and <s>strike</s>! I can even <h>highlight</h>! Now I'm a <a href="http://www.imvu.com/">fancy link.</a>
