--- a/home.html
+++ b/home.html
@@ -2,11 +2,24 @@
 
 <h1>Home</h1>
 
-
-<div class="banner-image">
-    <div class="banner-text">Bio</div>
-</div>
-
-Hello, I am <b>making changes.</b> Look at me, I'm <i>italic text!</i> I can change to <u>underline</u> and <s>strike</s>! I can even <h>highlight</h>! Now I'm a <a href="http://www.imvu.com/">fancy link.</a>
-
-<blockquote>Blockquote can be used for quoting, random messages, whatever you like!</blockquote>
+<p>Rose went away, so the Doctor was <b>blue.</b></br>
+Ask Donna, "Where's the Doctor?"</br>
+She'll reply, "Doctor who?"</br>
+Sarah Jane, and then Martha, and then both the Ponds</br>
+Had their fun with the Doctor but now they've all gone.</br>
+So if you want to know why the Tardis is blue...</br>
+There's a sad man inside with both hearts torn in two.</p>
+Let me bleed you this song of my heart deformed.</br>
+Lead you along this path in the dark, where I belong 'till I feel your warmth.</br>
+Let me weep you this poem as Heaven's Gates close. Paint you my soul, scarred and alone.</br>
+Waiting for your kiss to take me back home.</br>
+Hold me like you held onto life when all fears came alive and entombed me.</br>
+Love me like you loved the sun scorching the blood in my Vampire heart.</p>
+<p>I stole myself a Time Lord, a Doctor of time and peace.</br>
+A man who lived thousands of years, who often changed his face.</br>
+We soon became the best of friends, saw all there was to see.</br>
+The beginning of time and the end of days, from the mountains to the sea.</br>
+We picked up a few strays here or there, who went along for the ride.</br>
+Some stayed some left and some fell in love... and some of them have died.</br>
+But through it all, one thing remains, a fact which will always be...</br>
+I need that raggedy Doctor just as much as he needs me.</p>
