--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
         <div class="updates">Updates</div>
         <div class="scroll"><marquee>All of time and space anything that ever happened or ever will where do you want to start? </marquee></div>
     
-        <button class="b1"><a href="https://kasei-wars.github.io/LNU/home.html" target="content">Home</a></button>
-        <button class="b2"><a href="https://kasei-wars.github.io/LNU/bio.html" target="content">Bio</a></button>
-        <button class="b3"><a href="https://kasei-wars.github.io/LNU/faq.html" target="content">FAQ</a></button>
-        <button class="b4"><a href="https://kasei-wars.github.io/LNU/page.html" target="content">Page</a></button>
+        <button class="b1"><a href="home.html" target="content">Home</a></button>
+        <button class="b2"><a href="bio.html" target="content">Bio</a></button>
+        <button class="b3"><a href="faq.html" target="content">FAQ</a></button>
+        <button class="b4"><a href="page.html" target="content">Page</a></button>
         <button class="b5"><a href="link" target="_blank">Add</a> | <a href="javascript:IMVU.messagePopupShow({force_recipient_id:260022361})" target="_blank">Msg</a> | <a href="imvu:StartIM?avatar=TobiGoodBoy&fromSite=1">Chat</a> | <a href="link" target="_blank">Block</a></button>
     </div>
     </body>
