--- a/main.html
+++ b/main.html
@@ -15,7 +15,12 @@
         </div>
         <div class="misc"><img src="https://cdn.discordapp.com/attachments/429419105435648010/453913722713407489/vampire_fangs.jpg" width="375" height="175"></div>
         <div class="music"><iframe width="311" height="175" src="https://www.youtube.com/embed/QSM27r2OSS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-        <div class="updates">Updates</div>
+        <div class="updates">
+            LordNateUzumaki</br>
+        Time Lord</br>
+        Vampire</br>
+        Uzumaki</br>
+Wizard</div>
         <div class="scroll"><marquee>All of time and space anything that ever happened or ever will where do you want to start? </marquee></div>
     
         <button class="b1"><a href="home.html" target="content">Home</a></button>
