--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <div class="misc"><img src="https://cdn.discordapp.com/attachments/429419105435648010/453913722713407489/vampire_fangs.jpg" width="375" height="175"></div>
         <div class="music"><iframe width="311" height="175" src="https://www.youtube.com/embed/QSM27r2OSS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         <div class="updates">
-            LordNateUzumaki</br>
+            LordNateUzumaki</br></br>
         Time Lord</br>
         Vampire</br>
         Uzumaki</br>
