--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
             LordNateUzumaki</br></br>
         Time Lord</br>
         Vampire</br>
-        Uzumaki</br>
-Wizard</div>
+        Wizard</br>
+Uzumaki</div>
         <div class="scroll"><marquee>All of time and space anything that ever happened or ever will where do you want to start? </marquee></div>
     
         <button class="b1"><a href="home.html" target="content">Home</a></button>
