--- a/faq.html
+++ b/faq.html
@@ -7,4 +7,4 @@
 
 Normal text. <b>Bold</b> <i>Italic</i> <u>Underline</u> <s>Strikethrough</s> <h>Highlight</h> <a href="link">Link</a>
 
-<blockquote>Blockquote</Banana>
+<blockquote>Banana</Banana>
