--- a/faq.html
+++ b/faq.html
@@ -5,5 +5,6 @@
 
 <element class="b1"></element>
 
+Normal text. <b>Bold</b> <i>Italic</i> <u>Underline</u> <s>Strikethrough</s> <h>Highlight</h> <a href="link">Link</a>
 
 <Banana>Banana</Banana>
