--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,5 @@
 
 <element class="b1"></element>
 
-Normal text. <b>Bold</b> <i>Italic</i> <u>Underline</u> <s>Strikethrough</s> <h>Highlight</h> <a href="link">Link</a>
 
-<blockquote>Blockquote</blockquote>
+<blockquote>Just because I am a Naruto does not mean I am your Naruto I currently have a Sasuke and I am not looking for a replacement nor am I looking for a minato. Ask to rp before trying to rp with me.</blockquote>
