--- a/faq.html
+++ b/faq.html
@@ -6,4 +6,9 @@
 <element class="b1"></element>
 
 
-<blockquote>Just because I am a Naruto does not mean I am your Naruto I currently have a Sasuke and I am not looking for a replacement nor am I looking for a minato. Ask to rp before trying to rp with me.</blockquote>
+<blockquote>I am a Naruto Yes I have been for over 10 years.
+Just because I am a Naruto does not make me your Naruto
+No I am not looking for a Sasuke I already have.
+No I'm not looking for a Minato I need someone I can trust for that role.
+I am a multi roleplayer.
+I am Semi retired and roleplay only when I want too.</blockquote>
