--- a/faq.html
+++ b/faq.html
@@ -11,4 +11,6 @@ Just because I am a Naruto does not make me your Naruto
 No I am not looking for a Sasuke I already have.
 No I'm not looking for a Minato I need someone I can trust for that role.
 I am a multi roleplayer.
-I am Semi retired and roleplay only when I want too.</blockquote>
+I am Semi retired and roleplay only when I want too.
+I do not Accept Random adds so do not add me.
+No I do not gift people I do not know.</blockquote>
