--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,7 @@
 
 
 <blockquote>I am a Naruto Yes I have been for over 10 years.
-Just because I am a Naruto does not make me your Naruto
+Just because I am a Naruto does not mean I am your Naruto.
 No I am not looking for a Sasuke I already have.
 No I'm not looking for a Minato I need someone I can trust for that role.
 I am a multi roleplayer.
