--- a/faq.html
+++ b/faq.html
@@ -6,11 +6,11 @@
 <element class="b1"></element>
 
 
-<blockquote>I am a Naruto Yes I have been for over 10 years.
-Just because I am a Naruto does not mean I am your Naruto.
-No I am not looking for a Sasuke I already have.
-No I'm not looking for a Minato I need someone I can trust for that role.
-I am a multi roleplayer.
-I am Semi retired and roleplay only when I want too.
-I do not Accept Random adds so do not add me.
+<blockquote>I am a Naruto Yes I have been for over 10 years.</br>
+Just because I am a Naruto does not mean I am your Naruto.</br>
+No I am not looking for a Sasuke I already have.</br>
+No I'm not looking for a Minato I need someone I can trust for that role.</br>
+I am a multi roleplayer.</br>
+I am Semi retired and roleplay only when I want too.</br>
+I do not Accept Random adds so do not add me.</br>
 No I do not gift people I do not know.</blockquote>
