--- a/faq.html
+++ b/faq.html
@@ -8,9 +8,10 @@
 
 <blockquote>I am a Naruto Yes I have been for over 10 years.</br>
 Just because I am a Naruto does not mean I am your Naruto.</br>
-No I am not looking for a Sasuke I already have.</br>
+I am not like every other Naruto on Imvu so please dont treat me like one.</br>
+No I am not looking for a Sasuke I already have a Sasuke.</br>
 No I'm not looking for a Minato I need someone I can trust for that role.</br>
-I am a multi roleplayer.</br>
+I am a multi roleplayer so I am not bound to one character.</br>
 I am Semi retired and roleplay only when I want too.</br>
 I do not Accept Random adds so do not add me.</br>
-No I do not gift people I do not know.</blockquote>
+No I do not give random gifts to those I don't know.</blockquote>
